# digital_library

./: .gitignore  README.md
api/: pyproject.toml
api/core/: asgi.py  settings.py  urls.py  wsgi.py
api/custom_type/: __init__.py
api/module/account/: urls.py
api/module/account/helper/: sr.py
api/module/account/role/: urls.py
api/module/account/role/helper/: sr.py  util.py
api/module/account/user/: admin.py  forms.py  models.py  urls.py
api/module/conf/: urls.py
api/module/conf/variable/: consts.py  models.py  urls.py
api/module/noti/: urls.py
api/module/noti/verif/: admin.py  models.py  urls.py
api/public/locales/en/: translation.json
api/public/locales/vi/: translation.json
api/public/tests_data/: ccf.2.skill-questions.xlsx  ccf.xlsx  kpi.1.position.xlsx  kpi.2.staff.xlsx  kpi.3.quota-template.xlsx
api/service/: async_service.py  auth_service.py  collection_srevice.py  date_service.py  email_service.py  error_service.py  excel_service.py  format_service.py  framework_service.py  number_service.py  request_service.py  string_service.py  token_service.py
api/service/framework/drf_class/: custom_pagination.py  custom_permission.py
api/service/framework/logger/: file_logger.py
api/service/framework/middleware/: cors.py  strip_jwt.py
api/service/framework/model/: custom_save_mixin.py
api/service/tests/: test_utils.py
api/templates/emails/: noti_after_creating.html
api/templates/emails/reset_password/: en-us.html  vi-vn.html
api/templates/emails/signup/: en-us.html  vi-vn.html
api/urls/: ping.py  v1.py
docker/: .env.default  (+4 more)
(+159 files in other folders)
